fixed alignment issues in achievements page

--- a/pages/static/pages/styles/achievements.sass
+++ b/pages/static/pages/styles/achievements.sass
@@ -28,7 +28,10 @@ $primary-color: #ffc107
     display: block
     font-weight: 900
     img
-      max-width: 32px
+      height: 32px
+      width: 32px
+      object-fit: cover
+      margin-right: 0.5rem
       border-radius: 100vh
 
   sub
